--- a/axlotl_configs/quotes/mistral/qlora.yml
+++ b/axlotl_configs/quotes/mistral/qlora.yml
@@ -42,10 +42,10 @@ wandb_watch:
 wandb_run_id:
 wandb_log_model:
 
-gradient_accumulation_steps: 4
-micro_batch_size: 2
-num_epochs: 1
-optimizer: adamw_bnb_8bit
+gradient_accumulation_steps: 1
+micro_batch_size: 10
+num_epochs: 3
+optimizer: paged_adamw_32bit
 lr_scheduler: cosine
 learning_rate: 0.0002
 
