--- a/axlotl_configs/quotes/mistral/qlora.yml
+++ b/axlotl_configs/quotes/mistral/qlora.yml
@@ -45,7 +45,7 @@ wandb_log_model:
 gradient_accumulation_steps: 1
 micro_batch_size: 10
 num_epochs: 3
-optimizer: paged_adamw_32bit
+optimizer: adamw_bnb_8bit
 lr_scheduler: cosine
 learning_rate: 0.0002
 
