--- a/axlotl_configs/quotes/mistral/qlora.yml
+++ b/axlotl_configs/quotes/mistral/qlora.yml
@@ -12,31 +12,23 @@ datasets:
     ds_type: json
     type: completion
 dataset_prepared_path: last_run_prepared
-val_set_size: 0.01
+val_set_size: 0.02
 output_dir: ./qlora-out
 
 adapter: qlora
 lora_model_dir:
 
-sequence_len: 8192
+sequence_len: 2048
 sample_packing: true
-pad_to_sequence_len: true
 
 lora_r: 32
 lora_alpha: 16
 lora_dropout: 0.05
+lora_target_modules:
 lora_target_linear: true
 lora_fan_in_fan_out:
-lora_target_modules:
-  - gate_proj
-  - down_proj
-  - up_proj
-  - q_proj
-  - v_proj
-  - k_proj
-  - o_proj
 
-wandb_project:
+wandb_project: axolotl
 wandb_entity:
 wandb_watch:
 wandb_run_id:
@@ -45,7 +37,7 @@ wandb_log_model:
 gradient_accumulation_steps: 1
 micro_batch_size: 10
 num_epochs: 3
-optimizer: adamw_bnb_8bit
+optimizer: paged_adamw_32bit
 lr_scheduler: cosine
 learning_rate: 0.0002
 
@@ -63,10 +55,9 @@ logging_steps: 1
 xformers_attention:
 flash_attention: true
 
-warmup_steps: 10
-eval_steps: 0.05
-eval_table_size:
-eval_table_max_new_tokens: 128
+warmup_steps: 100
+eval_steps: 0.01
+save_strategy: epoch
 save_steps:
 debug:
 deepspeed:
